--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Demo</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="trion-development/angular-github-actions">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.4b8148a3acab94b58774.js" nomodule defer></script><script src="polyfills-es2015.28b264071c0a6503d0b4.js" type="module"></script><script src="main-es2015.e9d097e8133d61a1dde4.js" type="module"></script><script src="main-es5.e9d097e8133d61a1dde4.js" nomodule defer></script></body>
+<script src="runtime-es2015.c9afb3256f2870e161de.js" type="module"></script><script src="runtime-es5.c9afb3256f2870e161de.js" nomodule defer></script><script src="polyfills-es5.4bd3a6b7592230c35408.js" nomodule defer></script><script src="polyfills-es2015.28b264071c0a6503d0b4.js" type="module"></script><script src="main-es2015.e9d097e8133d61a1dde4.js" type="module"></script><script src="main-es5.e9d097e8133d61a1dde4.js" nomodule defer></script></body>
 </html>
